--- a/src/app.scss
+++ b/src/app.scss
@@ -1,13 +1,17 @@
-$backgroundColor: #f5f5f5;
+$backgroundColor: #313131;
 
-html, body {
+* {
+  color: antiquewhite;
+}
+
+html, body, .main {
   height: 100%;
   margin: 0;
   padding: 0;
 }
 
 body {
-  background: $backgroundColor;
+  background: linear-gradient(to bottom, darken($backgroundColor, 45) 0%, $backgroundColor 15%, $backgroundColor 90%, darken($backgroundColor, 45) 100%);
   height: 100%;
 
   #root {
@@ -17,18 +21,38 @@ body {
   }
 
   footer {
-    background: darken($backgroundColor, 50);
     border-top: 1px solid #eee;
     padding: 1em 3em;
     margin: 0;
   }
 
   header {
-    background: darken($backgroundColor, 75);
     border-bottom: 1px solid #eee;
     color: #eee;
     padding: 0;
     margin: 0;
     text-align: center;
   }
+}
+
+.panel {
+  margin: 1rem;
+  padding: 1rem;
+  min-width: 300px;
+  background-color: lighten($color: $backgroundColor, $amount: 15);
+  border-radius: 10px;
+  border-bottom: 4px solid white;
+}
+
+.panel-content {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+}
+
+.panel-header {
+  font-size: 30px;
+  border-bottom: solid 2px white;
+  margin-bottom: 1rem;
+  margin-top: -6px;
 }
