--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -1,26 +1,46 @@
-$backgroundColor: #efefef;
-$radius: 40%;
+
+$buttonColor1: rgb(240, 78, 78);
+$buttonColor2: rgb(68, 68, 233);
+$buttonSelected: rgb(49, 97, 49);
 
 form {
-  display: inline-block;
-  margin: auto;
-  width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-  label {
-    display: flex;
-    margin: 1rem 0;
-
-    &.methods {
-      span {
-        cursor: pointer;
-        margin-right: 1rem;
-        padding: .25rem .5rem;
-        background: #ccc;
-
-        &:hover, &.active {
-          background: #fff;
-        }
-      }
-    }
+.methods {
+  display: flex;
+  justify-content: space-evenly;
+  > * {
+    background-color: $buttonColor1;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+    border-bottom: 2px solid antiquewhite;
+    transition: 0.1s ease-in-out;
   }
+  > .form-selected {
+    background-color: $buttonSelected;
+  }
+  :hover {
+    margin-top: 8px;
+    border-bottom: 4px solid antiquewhite;
+  }
+  :active {
+    margin-top: 11px;
+    border-bottom: 1px solid rgb(59, 59, 59);
+    background-color: darken($color: $buttonSelected, $amount: 15);
+    color: darken($color: antiquewhite, $amount: 15);
+  }
+}
+
+.obj-area, input {
+  border-radius: 3px;
+  color: black;
+  background-color: rgb(184, 184, 184);
+}
+
+.form-submit {
+  background-image: linear-gradient(45deg, rgb(240, 78, 78), rgb(68, 68, 233));
 }
